[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "monoid_pydev"
version = "0.0.1a1"
authors = [
  { name="Monoid, Inc.", email="support@monoid.co" },
]
description = "Tools for building Monoid data silos."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://www.monoid.co"
"Bug Tracker" = "https://github.com/monoid/monoid/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.bumpver]
current_version = "0.0.1a1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

